static/style.css
:root {
    --background-color: white;
    --font-titles: 'Concert One', sans-serif;
    --font-content: 'Concert One', sans-serif;
    --font-content-color: rgb(0, 0, 0);
    --main-color: #000000d8;
    --contrast-color: white;
    --background-forms: rgba(0, 0, 0, 0.542);
    --background-input: rgba(255, 255, 255, 0.2);
    --background-input-hover: rgba(255, 255, 255, 0.25);
    --submit-form-color: black;
    --submit-form-background: rgba(255, 255, 255, 0.7);
    --submit-form-hover: rgba(255, 255, 255, 0.5);
    --prices-color: #777;
    --button-color: black;
    --button-hover: #333;
    --placeholder: rgb(255, 255, 255);
    --orange: rgb(228, 88, 44);
    --color-menu: #fff8f0;
}

/* Web Kit */

input[type='number']::-webkit-outer-spin-button,
input[type='number']::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
::-webkit-input-placeholder {
    color: var(--placeholder);
}

body,
html {
    background-color: var(--background-color);
    font-family: var(--font-content);
    color: var(--font-content-color);
    scroll-behavior: smooth;
    margin: 0;
    padding: 0;
    min-height: 100dvh;
    min-height: calc(var(--vh, 1vh) * 100);
    display: flex;
    flex-direction: column;
    transition: min-height 0.05s ease-out;
}

main {
    flex: 1;
}

footer {
    background-color: var(--main-color);
    color: var(--contrast-color);
    padding: 1rem;
    text-align: center;
}

/* ----- Header ----- */

header {
    top: 0;
    background-color: var(--main-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 21px;
    padding-bottom: 20px;
    z-index: 99;
}

.header-container-logo-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0;
}

.header-logo {
    background-color: transparent;
    border: none;
    cursor: pointer;
    transition: transform 0.05s;
}

.header-logo:hover {
    transform: scale(1.1);
}

.header-title {
    font-family: var(--font-titles);
    color: var(--contrast-color);
}

.header-nav {
    display: flex;
    gap: 2px;
}

.header-nav-button {
    background-color: transparent;
    border: none;
    font-size: 27px;
    padding: 10px;
    color: var(--contrast-color);
    cursor: pointer;
    border-radius: 10%;
    transform: translateZ(0) scale(0.9);
    transition: background-size 1s ease, transform 1s ease;
}

.header-nav-button:hover {
    background-color: var(--orange);
    transition: background-size 1s;
    transform: translateZ(30px) scale(1);
}

/* ----- Loggin check ----- */
.icon-wrapper {
    position: relative;
    display: inline-block;
}

.login-status {
    position: absolute;
    top: -10px;
    right: -10px;
    font-size: 14px;
    color: var(--contrast-color);
    background: rgb(210, 103, 51);
    border-radius: 50%;
    padding: 2.5px;
}

/* ----- Toggle menu ----- */

.sub-menu-wrap {
    position: absolute;
    top: 80px;
    right: 21px;
    width: 210px;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.3s;
}

.sub-menu-wrap.open-menu {
    max-height: 400px;
}

.sub-menu {
    background: var(--color-menu);
    padding: 20px;
    margin: 10px;
    border-radius: 5px;
}

.sub-menu h3 {
    color: var(--orange);
    font-size: smaller;
}

.sub-menu hr {
    border: 0;
    height: 1px;
    width: 100%;
    background: var(--orange);
    margin: 15px 0 10px;
}

.sub-menu-link {
    all: unset;
    display: flex;
    width: 100%;
    align-items: center;
    text-decoration: none;
    color: var(--orange);
    margin: 12px 0;
    cursor: pointer;
    border-bottom: 1px solid #e0cdb8;
}

.sub-menu-link p {
    width: 100%;
}

.sub-menu-link i {
    font-size: 10px;
    background: var(--contrast-color);
    border-radius: 50%;
    padding: 8px;
    margin-right: 15px;
    color: var(--orange);
}

.sub-menu-link span {
    font-size: 15px;
    transition: transform 0.5s;
}

.sub-menu-link:hover span {
    transform: translateX(5px);
}

.sub-menu-link:hover p {
    font-weight: 550;
}

.user-name {
    display: flex;
    align-items: center;
    overflow: hidden;
}

/* ----- Forms ----- */

.content {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--background-forms);
}

.form-box {
    justify-content: center;
    position: relative;
    display: flex;
    align-items: center;
    width: 512px;
    height: 950px;
    overflow: hidden;
    z-index: 2;
    padding-bottom: 20px;
}

.register-container,
.login-container,
.recover-container,
.reset-pass,
.profile-container,
.passwords-container,
.eliminate-account-container {
    position: absolute;
    width: 500px;
    display: flex;
    flex-direction: column;
    transition: 0.5s ease-in-out;
    top: 0;
    bottom: 0;
    margin: auto 0;
}

.register-container {
    display: none;
}

.login-container {
    display: block;
}

.recover-container {
    display: none;
}

.reset-pass {
    left: 4px;
    top: 0;
}

/* profile form */

.two-column-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 11px;
    top: 0;
}

.full-width {
    grid-column: span 2;
}

#profile .input-field {
    width: 80%;
}

#passwords .input-field {
    width: 90%;
}

#profile .submit {
    margin-top: 10px;
}

.profile-container {
    display: block;
}

.passwords-container {
    display: none;
}

.eliminate-account-container {
    display: none;
}
/* ------------- */

.top span {
    color: var(--contrast-color);
    font-size: small;
    padding: 20px 21px 0 0;
    display: flex;
    justify-content: center;
}

.bottom span {
    color: var(--contrast-color);
    font-size: small;
    padding: 20px 21px 0 0;
    display: flex;
    justify-content: center;
}

.bottom span a {
    font-weight: 500;
    color: var(--contrast-color);
    margin-left: 5px;
}
/* ... */

